# django-deferred-counter

./: LICENSE  readme.rst  setup.cfg
deferredCounters/: apps.py  models.py  tests.py
deferredCounters/management/commands/: compact.py
deferredCounters/migrations/: 0001_initial.py
